--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: Keeping History
-logo: /assets/img/logo-small-white.svg
+logo: logo.svg
 email: info@keepinghistory.org
 email_description: Contact Us
 email_icon:  <i class="fa-solid fa-envelope"></i>
